v3.5.1 (XXXX-XX-XX)
-------------------

* Fixed error message "Invalid argument: assume_tracked is set but it is not tracked yet" when
  trying to write to the same keys in concurrent RocksDB transactions. This error will now be
  reported as a "Lock timeout" error, with error code 1200.

* Added resign leadership job to supervision.

* Hide MMFiles-specific information in web UI (in detail view of a collection) when the
  storage engine is not MMFiles or when the information is not available.

* Keep followers in sync if the old leader resigned and stopped writes.

* Abort a FailedLeader job when its _to_ server fails.

* Decreased unnecessary wait times for agency callbacks in case they were
  called earlier than expected by main thread.

* Make arangosh not close the connection after the user aborts an operation.
  This restores the same behavior as in previous versions of ArangoDB, which also
  left the connection open.

* Refactor maintenance to use a TakeoverShardLeadership job. This fixes a bug
  that a shard follower could have set the wrong leader for the shard locally.


v3.5.0-rc.7 (2019-08-01)
------------------------

* Upgraded arangodb starter version to 0.14.12.


v3.5.0-rc.6 (2019-07-29)
------------------------

* Fixed issue #9459: Optimization rule remove-collect-variables does not KEEP all necessary data.

* Added gzip and encryption options to arangoimport and arangoexport.

* Added missing REST API route GET /_api/transaction for retrieving the list of
  currently ongoing transactions.

* Fixed issue #9558: RTRIM not working as expected.

* Added startup error for bad temporary directory setting.

  If the temporary directory (--temp.path) setting is identical to the database
  directory (`--database.directory`) this can eventually lead to data loss, as
  temporary files may be created inside the temporary directory, causing overwrites of
  existing database files/directories with the same names.